# subscriber

./: Cargo.toml  Makefile  README.md  config.yaml  notes.md  strories.md  useful_commnds.md
.cargo/: config.toml
configuration/: base.yaml
migrations/: 0001_create_subscriptions_table.sql
scripts/: init_db.sh  init_redis.sh
src/: main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscription.rs  utils.rs
tests/api/: helpers.rs
