[package]
name = "subscriber"
version = "0.1.0"
authors = ["Koray Sariteke <koray.sariteke@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subscriber"
path = "src/main.rs"

[dependencies]
actix-web = "4"
reqwest = "0.12.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx] 
version = "0.7" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
